Minor fix: align the checkbox

--- a/client/gutenberg/extensions/contact-form/editor.scss
+++ b/client/gutenberg/extensions/contact-form/editor.scss
@@ -34,6 +34,9 @@
 			float: right;
 		}
 	}
+	.components-checkbox-control__input {
+		margin-top: -10px;
+	}
 }
 
 .editor-block-list__block {
